--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Link do repositório remoto: git@github.com:FelipeLuz08/univesp-pi.git -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,21 +16,23 @@
     </header>
 
     <main>
-         <section class="entrar">
-            <p>Acesse com seu CPF e senha:</p>
-            <label for="cpf">CPF</label>
-            <input type="text" id="cpf">
-            <label for="senha">Senha</label>
-            <input type="text" id="senha">
-            <a href="recuperaSenha.html">Esqueceu a senha?</a>
-            <button class="botoes">Entrar</button>
-         </section>
+         <section class="acesso">
+            <div class="acesso__entrar">
+                <p>Acesse com seu CPF e senha:</p>
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf">
+                <label for="senha">Senha</label>
+                <input type="text" id="senha">
+                <a href="recuperaSenha.html" class="acesso__entrar__recuperacao">Esqueceu a senha?</a>
+                <button class="botoes">Entrar</button>
+            </div>
 
-         <section class="cadastrar">
-            <p>Cadastre-se</p>
-            <label for="cpf">CPF</label>
-            <input type="text" id="cpf">
-            <button class="botoes">Avançar</button>
+            <div class="acesso__cadastrar">
+                <p>Cadastre-se</p>
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf">
+                <button class="botoes">Avançar</button>
+            </div>
          </section>        
     </main>
 
